# H2020_RESCUER_CERTH_Localization_Tools

./: .gitignore  README.md
CameraCalibration/: calibration.py  getImages.py
android_localization_viewer/: settings.gradle.kts
android_localization_viewer/app/: build.gradle.kts
android_localization_viewer/app/src/main/: AndroidManifest.xml
android_localization_viewer/app/src/main/res/drawable/: baseline_wifi_black.xml  info_window_background.xml
android_localization_viewer/app/src/main/res/layout/: activity_main.xml  chat_dialog_layout.xml  custom_info_window.xml  debug_info_layout.xml  dialog_add_broker.xml  dialog_send_position.xml  fusion_debug_info_layout.xml
android_localization_viewer/app/src/main/res/values/: strings.xml  themes.xml
android_localization_viewer/app/src/main/res/values-night/: themes.xml
android_localization_viewer/gradle/wrapper/: gradle-wrapper.properties
fusion/: 1_build.sh  2_run.sh  3_kill.sh  Dockerfile  exec
fusion/code/: fusion_main.py
indoor_PCCL/: 1_build_docker.sh  3_connect_camera.sh  4_run_docker.sh  5_kill_docker.sh  Dockerfile  connect_camera.py  exec  which gpu driver.txt
indoor_PCCL/code/: cartesian.py  grid.py  histogram_matching.py  outer_pano.py  outer_pano_Modane.py  pccl_pano.py  pccl_per.py  pccl_utils.py  testing_pytorch3d.py
localization_simulator/: Dockerfile  README.md  lin_start.sh  requirements.txt  simulator_start.bat
localization_simulator/code/: additional_functions.py  print_path.py  set_path.py  to_broker.py
proxycam/: 1_build.sh  2_run.sh  3_kill.sh  Dockerfile  exec
proxycam/code/: proxycam.py
visual_loc_pano/: 1_build_docker.sh  2_run_one_shot.sh  3_kill_docker.sh  4_run_map_area.sh  5_run_calibrate_map.sh  6_run_use_map_calibrated.sh  7_run_download_calibrated.sh  Dockerfile  README_needs_update.txt  exec
visual_loc_pano/code/: Equirec2Perspec.py  lazy_start.py  outer_slam_pano.py  proxycam.py  run_readcamera_poses.py
visual_loc_pano/stella_vslam/: CMakeLists.txt  DEADJOE
visual_loc_pano/stella_vslam/3rd/FBoW/: CMakeCache.txt
visual_loc_pano/stella_vslam/3rd/pangolin_viewer/: CMakeLists.txt  README.md
visual_loc_pano/stella_vslam/3rd/pangolin_viewer/cmake/: Config.cmake.in
visual_loc_pano/stella_vslam/3rd/spdlog/: tweakme.h
visual_loc_pano/stella_vslam/3rd/spdlog/fmt/: bin_to_hex.h  ostr.h
visual_loc_pano/stella_vslam/3rd/spdlog/include/fmt/: fmt.h
visual_loc_pano/stella_vslam/3rd/spdlog_old/include/spdlog/: common.h
visual_loc_pano/stella_vslam/docker/gtsam/pangolin/: Dockerfile
visual_loc_pano/stella_vslam/example/: CMakeLists.txt  Makefile  d  map_x.txt  map_y.txt  run_camera_slam.cc  run_camera_slam.cc.SOTOS  run_camera_slam.cc.WORKING  run_euroc_slam.cc  run_image_slam.cc  run_kitti_slam.cc  run_loop_closure.cc  run_tum_rgbd_slam.cc  run_video_slam.cc
visual_loc_pano/stella_vslam/example/aist/: equirectangular.yaml
visual_loc_pano/stella_vslam/example/rescuer/: calib_1080.yaml  calib_360.yaml  calib_720.yaml
visual_loc_pano/stella_vslam/src/pangolin_viewer/: viewer.cc  viewer.h
visual_loc_pano/stella_vslam/src/stella_vslam/: system.cc  system.h  type.h
visual_loc_pano/stella_vslam/src/stella_vslam/camera/: base.cc  base.h
visual_loc_pano/stella_vslam/src/stella_vslam/feature/: orb_extractor.cc
visual_loc_pano/stella_vslam/src/stella_vslam/module/: type.h
visual_loc_pano/stella_vslam/src/stella_vslam/optimize/: global_bundle_adjuster.cc  graph_optimizer.cc  local_bundle_adjuster_g2o.cc  pose_optimizer_g2o.cc  transform_optimizer.cc
visual_loc_pano/stella_vslam/src/stella_vslam/optimize/internal/se3/: shot_vertex.h
(+8 files in other folders)
